fixed map width that was causing a container breach on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -694,7 +694,7 @@ footer p {
   }
 
   .mapCol {
-    width: 400px;
+    width: 380px;
   }
 
   .preFooter {
