--- a/public/assets/css/mediaQueries.css
+++ b/public/assets/css/mediaQueries.css
@@ -113,7 +113,7 @@
   }
 
   .mapCol {
-    width: 400px;
+    width: 380px;
   }
 
   .preFooter {
